# sdl-notes-and-examples

./: CMakeLists.txt  main.cpp
02_getting_an_image_on_the_screen/: 02_getting_an_image_on_the_screen.cpp
03_event_driven_programming/: 03_event_driven_programming.cpp
04_key_presses/: 04_key_presses.cpp
05_optimized_surface_loading_and_soft_stretching/: 05_optimized_surface_loading_and_soft_stretching.cpp
06_extension_libraries_and_loading_other_image_formats/: 06_extension_libraries_and_loading_other_image_formats.cpp
07_texture_loading_and_rendering/: 07_texture_loading_and_rendering.cpp
09_the_viewport/: 09_the_viewport.cpp
10_color_keying/: 10_color_keying.cpp
11_clip_rendering_and_sprite_sheets/: 11_clip_rendering_and_sprite_sheets.cpp
12_color_modulation/: 12_color_modulation.cpp
13_alpha_blending/: 13_alpha_blending.cpp
14_animated_sprites_and_vsync/: 14_animated_sprites_and_vsync.cpp
15_rotation_and_flipping/: 15_rotation_and_flipping.cpp
16_true_type_fonts/: 16_true_type_fonts.cpp
17_mouse_events/: 17_mouse_events.cpp
18_key_states/: 18_key_states.cpp
19_gamepads_and_joysticks/: 19_gamepads_and_joysticks.cpp
20_force_feedback/: 20_force_feedback.cpp
21_sound_effects_and_music/: 21_sound_effects_and_music.cpp
22_timing/: 22_timing.cpp
23_advanced_timers/: 23_advanced_timers.cpp
24_calculating_frame_rate/: 24_calculating_frame_rate.cpp
25_capping_frame_rate/: 25_capping_frame_rate.cpp
26_motion/: 26_motion.cpp
27_collision_detection/: 27_collision_detection.cpp
30_scrolling/: 30_scrolling.cpp
notes/: notes.md  (+3 more)
(+23 files in other folders)
